# scriba

./: .env.example  .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  live-integration.yml  publish.yml
docs/: backend_decision_matrix.md  benchmark_schema.md  benchmark_spec_v1.md  quality_evaluation_framework.md  rebuild_notes.md  session_handoff_2026-03-02.md
profiles/: README.md  pipeline.profile.example.yaml
profiles/hybrid/: pipeline.profile.hybrid_local_spawned_ocr_remote_text.example.yaml
profiles/local_attached/: pipeline.profile.local_attached_litellm.example.yaml  pipeline.profile.local_attached_litellm_qwen35_35b_a3b_mxfp4.example.yaml  pipeline.profile.local_attached_litellm_qwen35_4b_bf16.example.yaml  (+5 more)
samples/: README.md  matrix_report.json  matrix_report.md  matrix_runs.jsonl  matrix_runs.smoke.jsonl  quick_runs.md  quick_telemetry.md
scripts/: append_quick_telemetry_history.py  build_calibration_pack.py  check_cerebras_model_access.py  estimate_token_budget.py  generate_benchmark_pdfs.py  generate_benchmark_variants.py  quick_cerebras_bench.sh  quick_eval.sh  quick_openrouter_bench.sh  render_hosted_pareto.py  render_matrix_report.py  render_model_selection_report.py  render_quick_telemetry.py  render_run_table.py  run_matrix.sh  scaffold_benchmark_v1.py  update_quick_eval.sh
tests/: test_backend_clients.py  test_backend_metadata.py  test_cli.py  test_integration_benchmark_flow.py  test_profile.py  test_rate_limit.py  test_render_matrix_report.py  test_runner.py  test_stages.py  test_token_count.py
(+93 files in other folders)
